2010-04-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (_userAddressSetCallback): take
	identities with empty displayname into account. In JS, "" = false,
	therefore we need to test it against "null" to achieve this.

2010-03-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendar-event-dialog.xul
	We correctly overlay the menuitem for the "confidential" label

2010-03-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js
	(onXMLRequestReadyStateChange): we check the content-type for
	"text/xml" or "application/xml" return types before requesting the
	"responseXML" member of the request object. We also check for a
	content-length > 0. This avoids a "no content found" error with
	empty responses.

2010-03-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (_initAccountMgr): it may happen that
	identities referenced in the account manager are ghost identities.
	We work-around this, at least for the moment, by explicitly
	removing those from the default account.

2010-02-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (onDAVQueryComplete:) ensure that the
	returned entries exists in the cache before deleting them, to
	avoid an exception.

2010-01-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/skin/classic/sogo-connector/addressbook/addressbook.groupdav.overlay.css:
	added classes and icons from Mac and non-Mac platforms. (Closes: #51)

2010-01-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	fixed support for webdav-sync, which didn't take the intermediary
	"supported-report" element into account.
	Fixed a bug in the intepretation of the DAV resourcetype property.

2009-12-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: ensure